# TelegramBotToCodex

./: .gitignore  AGENTS.md  Makefile  README.md  config.example.toml  pyproject.toml
scripts/: service.sh
src/telegram_bot_to_codex/: __init__.py  app.py  codex.py  config.py  service.py  state.py  telegram_api.py
tests/: test_codex.py  test_config.py  test_service.py  test_state.py
